--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://e11dca3c-906e-4507-ba4b-ff835beec487-00-1u33dm9nywkfy.janeway.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://001b34e3-001f-4d03-858c-d5a57a7dd5c0-00-34zzuz0sf837c.kirk.replit.dev/">
