--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://001b34e3-001f-4d03-858c-d5a57a7dd5c0-00-34zzuz0sf837c.kirk.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://957ba5be-c4e8-4426-9263-b4b91aedd6db-00-1jgmnhuvx3vjz.riker.replit.dev/">
