--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://957ba5be-c4e8-4426-9263-b4b91aedd6db-00-1jgmnhuvx3vjz.riker.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://e2f3fb42-d232-4222-8c5c-8586ef1d9a16-00-2rshwrtogxaq8.picard.replit.dev/">
