--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://e2f3fb42-d232-4222-8c5c-8586ef1d9a16-00-2rshwrtogxaq8.picard.replit.dev/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://944ae8fe-82b5-408f-89bd-77874dd3d458-00-l8atij3pz3o1.spock.replit.dev/">
